[package]
name = "stybulate"
version = "1.0.0"
authors = ["Guillaume Comte <guillaume.comte10@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/guigui64/stybulate"
homepage = "https://github.com/guigui64/stybulate"
description = "Tabulate with Style"
categories = ["command-line-interface"]
exclude = ["/.github/", "/scripts/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ansi_term_style"]
ansi_term_style = ["ansi_term"]

[dependencies]
strip-ansi-escapes = "0.1.0"
unicode-width = "0.1.7"
ansi_term = { version = "0.12.1", optional = true }
